rgw: read incremental metalog from master cluster based on truncate variable when the log entry in the meta.log object of the secondary cluster is empty, the value of max_marker is also empty,which can't meet the requirement that mdlog_marker <= max_marker,resulting in that the secondary cluster can't fetch new log entry from the master cluster and infinite loop,finally, the secondary cluster's metadata can't catch up the master cluster. when the truncate is false, it means that the secondary cluster's meta.log is empyt,we can read more from master cluster.

Fixes: https://tracker.ceph.com/issues/46563

Signed-off-by: gengjichao <gengjichao@jd.com>
(cherry picked from commit 2ed1c3e28a326e1422b0b6af47dd0af300ae85a2)
(cherry picked from commit 3b61154d39d6c4a1f29c6464e588589155982fcd)